--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Carthage/Checkouts/PrimaryFlightDisplay"]
 	path = Carthage/Checkouts/PrimaryFlightDisplay
 	url = https://github.com/kouky/PrimaryFlightDisplay.git
+[submodule "Carthage/Checkouts/SnapKit"]
+	path = Carthage/Checkouts/SnapKit
+	url = https://github.com/SnapKit/SnapKit.git
